# claude-code-telemetry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
hooks/: __init__.py  db_logger.py  db_notification.py  db_posttooluse.py  db_precompact.py  db_pretooluse.py  db_sessionend.py  db_sessionstart.py  db_stop.py  db_subagentstop.py  db_userpromptsubmit.py  health_check.py  session_manager.py
migrations/: 001_initial_schema.sql  002_add_hookevents_columns.sql  003_add_token_git_tracking.sql  004_v2_schema.sql  005_data_fidelity.sql
reports/: productivity_report.html  productivity_report.md
scripts/: dashboard.sql  generate_report.js  install.ps1  sync.ps1
tests/: __init__.py  conftest.py  test_calculate_cost.py  test_db_complex_operations.py  test_db_simple_inserts.py  test_diagnose_connection_error.py  test_git_info.py  test_health_check.py  test_hook_entry_points.py  test_log_event.py  test_parse_transcript.py  test_parse_transcript_line.py
